--- a/android/2023/깃허브-계정-두개-사용하기.md
+++ b/android/2023/깃허브-계정-두개-사용하기.md
@@ -1,31 +1,60 @@
-# 알고리즘 학습 순서
+# 맥에서 깃허브 계정 두개 이상 사용하기
 
-## 문법공부(추천언어)
+## 목차
 
-- C++ : 자료가 많다.
-- Python : 알고리즘에 유리한 API 제공
+[참고](#참고)
 
-## 온라인 알고리즘 100제
+## SSH(Secure Shell) Key 생성
 
-* 기본문제집(100) : 코드업, 백준
+### SSH Key 조회
 
-## 세부 알고리즘(공부 순서)
+```text
+cd ~/.ssh
+ls -al
+```
 
-- 그리디 알고리즘 : 쉽다, 자주 출제되는 문제
-- 탐색 알고리즘 : DFS, BFS..
-- 기본 동적 프로그래밍
-- ~~고급 알고리즘~~ : 볼 필요 없다.
+### SSH Key 생성
 
-## 업계 수준, 스터디 루트
+```text
+ssh-keygen -t rsa -C "a@example.com" -f "id\_rsa\_A"
+Enter passphrase (empty for no passphrase): (Enter)  
+Enter same passphrase again: (Enter)
 
-- 삼성전자역량테스트 : 백준
-- 카카오 : 프로그래머스
-- 라인 : ?
+ssh-keygen -t rsa -C "b@example.com" -f "id\_rsa\_B"
+Enter passphrase (empty for no passphrase): (Enter)  
+Enter same passphrase again: (Enter)
 
-## 시작
+..
+```
 
-- 알고리즘 유투브 강의 수강
-- 백준 온라인 저지 : 그리디, 완전탐색 문제 50개씩 풀기
-- 삼성전자소프트웨어역량 테스트 풀기
-- 그리디, 동적프로그래밍(기초), 탐색 50문제씩 풀기
-- 문제 계속 풀기
+
+
+## config 파일
+
+> #userA에 대한 SSH 설정  
+> Host github.com**\-a**  
+> HostName github.com  
+> User userA  
+> IdentityFile ~/.ssh/id\_rsa\_userA  
+>
+> #userB에 대한 SSH 설정  
+> Host github.com**\-b**  
+> HostName github.com  
+> User userB  
+> IdentityFile ~/.ssh/id\_rsa\_userB
+
+## clone
+
+> 저장소 주소  
+> git@github.com:ovso/note.git  
+> git@github.com:jaeho/book.git  
+> ...  
+>
+> 클론할 주소  
+> git@github.com**\-a**:ovso/note.git  
+> git@github.com**\-b**:jaeho/book.git  
+> ...
+
+# 참고
+
+[https://usingu.co.kr/frontend/git/%ED%95%9C-%EC%BB%B4%ED%93%A8%ED%84%B0%EC%97%90%EC%84%9C-github-%EA%B3%84%EC%A0%95-%EC%97%AC%EB%9F%AC%EA%B0%9C-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0/](https://usingu.co.kr/frontend/git/%ED%95%9C-%EC%BB%B4%ED%93%A8%ED%84%B0%EC%97%90%EC%84%9C-github-%EA%B3%84%EC%A0%95-%EC%97%AC%EB%9F%AC%EA%B0%9C-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0/)https://usingu.co.kr/frontend/git/한-컴퓨터에서-github-계정-여러개-사용하기/)
