--- a/android/2023/깃허브-계정-두개-사용하기.md
+++ b/android/2023/깃허브-계정-두개-사용하기.md
@@ -2,59 +2,115 @@
 
 ## 목차
 
-[참고](#참고)
+## SSH(Secure Shell) Key 조회와 생성
 
-## SSH(Secure Shell) Key 생성
-
-### SSH Key 조회
+### 조회
 
 ```text
-cd ~/.ssh
-ls -al
+% cd ~/.ssh
+% ls -al
 ```
 
-### SSH Key 생성
+### 생성
 
 ```text
-ssh-keygen -t rsa -C "a@example.com" -f "id\_rsa\_A"
+% ssh-keygen -t rsa -C "a@example.com" -f "id_rsa_A"
 Enter passphrase (empty for no passphrase): (Enter)  
 Enter same passphrase again: (Enter)
 
-ssh-keygen -t rsa -C "b@example.com" -f "id\_rsa\_B"
+% ssh-keygen -t rsa -C "b@example.com" -f "id_rsa_B"
 Enter passphrase (empty for no passphrase): (Enter)  
 Enter same passphrase again: (Enter)
 
-..
+```
+
+생성 후 다시 조회하면 생성한 파일을 확인 할 수 있습니다.
+
+```text
+id_rsa_A			// 개인키
+id_rsa_A.pub	// 공개키
+id_rsa_B
+id_rsa_B.pub
 ```
 
 
 
-## config 파일
+## SSH-agent에 새로 생성한 SSH Key 추가
 
-> #userA에 대한 SSH 설정  
-> Host github.com**\-a**  
-> HostName github.com  
-> User userA  
-> IdentityFile ~/.ssh/id\_rsa\_userA  
->
-> #userB에 대한 SSH 설정  
-> Host github.com**\-b**  
-> HostName github.com  
-> User userB  
-> IdentityFile ~/.ssh/id\_rsa\_userB
+### SSH-agent 실행
 
-## clone
+```text
+% eval "$(ssh-agent -s)"
+> Agent pid 59566					// pid 값은 매번 달라집니다.
+```
 
-> 저장소 주소  
-> git@github.com:ovso/note.git  
-> git@github.com:jaeho/book.git  
-> ...  
->
-> 클론할 주소  
-> git@github.com**\-a**:ovso/note.git  
-> git@github.com**\-b**:jaeho/book.git  
-> ...
+### 개인키를 SSH-agent 에 추가
+
+```text
+% ssh-add ~/.ssh/id_rsa_A
+% ssh-add ~/.ssh/id_rsa_B
+```
+
+### SSH-agent 에 개인키가 추가됐는지 확인
+
+```text
+% ssh-add -l
+3072 SHA256........a@example.com (RSA)
+3072 SHA256........b@example.com (RSA)
+```
+
+
+
+## 깃허브에 SSH 공개키(.pub) 추가
+
+### 공개키 복사
+
+```text
+% cat id_rsa_A | pbcopy
+```
+
+### 깃허브에 공개키 추가
+
+- 깃허브 Settings -> SSH and GPG keys -> SSH keys -> New SSH key > **SSH keys / Add new**
+  - SSH keys 추가 화면은 Title, Key type, Key 로 나뉘어 있습니다. Title은 설명을, Key type은 Authentication Key(기본값)를, Key는 복사한 공개키를 입력하면 됩니다.
+- 추가로 생성한 id_rsa_B 도 다른 깃허브 계정에 등록해 줍니다.
+
+
+
+## SSH config 파일 설정하고 SSH 연결 테스트
+
+### SSH config 파일 설정
+
+config 파일의 위치는 cd ~/.ssh 입니다.
+
+<script src="https://gist.github.com/ovso/1acb3d9fa59f35ad7687856f481cf20e.js"></script>
+
+Host 는 clone 할 때 쓰입니다.
+
+### SSH 연결 테스트
+
+```text
+% ssh -T git@github.com-a
+
+Hi userA! You’ve successfully authenticated, ...
+```
+
+
+
+## SSH 로 clone 하기
+
+```text
+저장소 주소
+git@github.com:ovso/note.git  
+git@github.com:jaeho/book.git  
+
+클론할 주소
+% git clone git@github.com-a:ovso/note.git  
+% git clone git@github.com-b:jaeho/book.git  
+```
+
+clone 이 실행되면 SSH config 파일에서 Host 에 GitHub.com-a 를 찾아 SSH로 연결해 인증을 진행하고 내려받게 됩니다.
 
 # 참고
 
-[https://usingu.co.kr/frontend/git/%ED%95%9C-%EC%BB%B4%ED%93%A8%ED%84%B0%EC%97%90%EC%84%9C-github-%EA%B3%84%EC%A0%95-%EC%97%AC%EB%9F%AC%EA%B0%9C-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0/](https://usingu.co.kr/frontend/git/%ED%95%9C-%EC%BB%B4%ED%93%A8%ED%84%B0%EC%97%90%EC%84%9C-github-%EA%B3%84%EC%A0%95-%EC%97%AC%EB%9F%AC%EA%B0%9C-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0/)https://usingu.co.kr/frontend/git/한-컴퓨터에서-github-계정-여러개-사용하기/)
+[한 컴퓨터에서 깃허브 계정 여러개 사용하기](https://usingu.co.kr/frontend/git/%ED%95%9C-%EC%BB%B4%ED%93%A8%ED%84%B0%EC%97%90%EC%84%9C-github-%EA%B3%84%EC%A0%95-%EC%97%AC%EB%9F%AC%EA%B0%9C-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0/)
