--- a/android/2023/깃허브-계정-두개-사용하기.md
+++ b/android/2023/깃허브-계정-두개-사용하기.md
@@ -83,7 +83,7 @@ id_rsa_B.pub
 
 config 파일의 위치는 cd ~/.ssh 입니다.
 
-<script src="https://gist.github.com/ovso/1acb3d9fa59f35ad7687856f481cf20e.js"><br></script>
+<script src="https://gist.github.com/ovso/1acb3d9fa59f35ad7687856f481cf20e.js">{<br>}</script>
 
 Host 는 clone 할 때 쓰입니다.
 
