--- a/android/2023/깃허브-계정-두개-사용하기.md
+++ b/android/2023/깃허브-계정-두개-사용하기.md
@@ -2,6 +2,12 @@
 
 ## 목차
 
+- [SSH(Secure Shell) Key 조회와 생성](#SSH(Secure Shell) Key 조회와 생성)
+- [SSH-agent에 새로 생성한 SSH Key 추가](#SSH-agent에 새로 생성한 SSH Key 추가)
+- [깃허브에 SSH 공개키(.pub) 추가](#깃허브에 SSH 공개키(.pub) 추가)
+- [SSH config 파일 설정하고 SSH 연결 테스트](#SSH config 파일 설정하고 SSH 연결 테스트)
+- [SSH 로 clone 하기](#SSH 로 clone 하기)
+
 ## SSH(Secure Shell) Key 조회와 생성
 
 ### 조회
@@ -83,7 +89,19 @@ id_rsa_B.pub
 
 config 파일의 위치는 cd ~/.ssh 입니다.
 
-<script src="https://gist.github.com/ovso/1acb3d9fa59f35ad7687856f481cf20e.js">{<br>}</script>
+```text
+#a에 대한 SSH 설정
+Host github.com-a
+HostName github.com
+User a
+IdentityFile ~/.ssh/id_rsa_A
+
+#b에 대한 SSH 설정
+Host github.com-b
+HostName github.com
+User b
+IdentityFile ~/.ssh/id_rsa_B
+```
 
 Host 는 clone 할 때 쓰입니다.
 
