--- a/android/2023/깃허브-계정-두개-사용하기.md
+++ b/android/2023/깃허브-계정-두개-사용하기.md
@@ -2,11 +2,15 @@
 
 ## 목차
 
-- [SSH(Secure Shell) Key 조회와 생성](#SSH(Secure Shell) Key 조회와 생성)
-- [SSH-agent에 새로 생성한 SSH Key 추가](#SSH-agent에 새로 생성한 SSH Key 추가)
-- [깃허브에 SSH 공개키(.pub) 추가](#깃허브에 SSH 공개키(.pub) 추가)
-- [SSH config 파일 설정하고 SSH 연결 테스트](#SSH config 파일 설정하고 SSH 연결 테스트)
-- [SSH 로 clone 하기](#SSH 로 clone 하기)
+[SSH(Secure Shell) Key 조회와 생성](#SSH(Secure Shell) Key 조회와 생성)
+
+[SSH-agent에 새로 생성한 SSH Key 추가](#SSH-agent에 새로 생성한 SSH Key 추가)
+
+[깃허브에 SSH 공개키(.pub) 추가](#깃허브에 SSH 공개키(.pub) 추가)
+
+[SSH config 파일 설정하고 SSH 연결 테스트](#SSH config 파일 설정하고 SSH 연결 테스트)
+
+[SSH 로 clone 하기](#SSH 로 clone 하기)
 
 ## SSH(Secure Shell) Key 조회와 생성
 
