--- a/android/2023/깃허브-계정-두개-사용하기.md
+++ b/android/2023/깃허브-계정-두개-사용하기.md
@@ -6,7 +6,7 @@
 
 [SSH-agent에 새로 생성한 SSH Key 추가](#SSH-agent에-새로-생성한-SSH-Key-추가)
 
-[깃허브에 SSH 공개키(.pub) 추가](#깃허브에-SSH-공개키(.pub)-추가)
+[깃허브에 SSH 공개키 추가](#깃허브에 SSH 공개키 추가)
 
 [SSH config 파일 설정하고 SSH 연결 테스트](#SSH-config-파일-설정하고-SSH-연결-테스트)
 
@@ -73,12 +73,12 @@ id_rsa_B.pub
 
 
 
-## 깃허브에 SSH 공개키(.pub) 추가
+## 깃허브에 SSH 공개키 추가
 
 ### 공개키 복사
 
 ```text
-% cat id_rsa_A | pbcopy
+% cat id_rsa_A.pub | pbcopy
 ```
 
 ### 깃허브에 공개키 추가
