--- a/android/2023/깃허브-계정-두개-사용하기.md
+++ b/android/2023/깃허브-계정-두개-사용하기.md
@@ -39,13 +39,13 @@ Enter same passphrase again: (Enter)
 생성 후 다시 조회하면 생성한 파일을 확인 할 수 있습니다.
 
 ```text
-id_rsa_A			// 개인키
-id_rsa_A.pub	// 공개키
+id_rsa_A
+id_rsa_A.pub
 id_rsa_B
 id_rsa_B.pub
 ```
 
-
+개인키는 id_rsa_A, 공개키는 id_rsa_A.pub 입니다.
 
 ## SSH-agent에 새로 생성한 SSH Key 추가
 
@@ -53,8 +53,10 @@ id_rsa_B.pub
 
 ```text
 % eval "$(ssh-agent -s)"
-> Agent pid 59566					// pid 값은 매번 달라집니다.
+> Agent pid 59566
 ```
+
+pid 값은 매번 달라집니다.
 
 ### 개인키를 SSH-agent 에 추가
 
