--- a/android/2023/라이브러리-업데이트가-안될-때.md
+++ b/android/2023/라이브러리-업데이트가-안될-때.md
@@ -14,7 +14,7 @@
 
   - 안.스의 External Libraries -> Gradle:{라이브러리 namespace} -> 커서메뉴(마우스 메뉴) -> 커서메뉴의 Open In > Finder 선택
 
-    <img src="./images/library-open-in.png" width = 200 align="left">
+    - <img src="./images/library-open-in.png" width = 200 align="left">
 
     - 처음부터 Finder 나 Terminal 로 들어가서 해당 라이브러리의 폴더를 찾기란 어렵습니다.
       - 라이브러리 폴더명이 해시코드와 유사하기 때문입니다.
