--- a/android/2023/라이브러리-업데이트가-안될-때.md
+++ b/android/2023/라이브러리-업데이트가-안될-때.md
@@ -18,6 +18,10 @@
 - **Sync Project with Gradle Files** 하여 프로젝트와 Gradle 을 동기화 하면 라이브러리가 정상적으로 업데이트 된 것을 확인할 수 있습니다.
 - 혹시 문제가 여전하다면, 라이브러리 버전을 바꾸어 가며 테스트 해보시기 바랍니다. 반드시 될 겁니다 : )
 
+### 안.스에서 캐시 경로 진입하기
+
+<img src="./images/library-open-in.png" width = 300 align="left">
+
 ## 실패 했던 시도
 
 - dependencies {...} 에 참조되어 있던 버전 무수히 바꿔보기
