--- a/android/2023/라이브러리-업데이트가-안될-때.md
+++ b/android/2023/라이브러리-업데이트가-안될-때.md
@@ -15,7 +15,7 @@
       - 라이브러리 폴더명이 해시코드와 유사하기 때문입니다.
       - 폴더 뎁스도 제법 있을 수 있어요.
 - 해당 라이브러리 캐시를 찾아 관련 파일을 모두 제거 후에 안.스를 열고 빌드를 하면 당연히 빌드 에러가 발생합니다.
-- **Sync Project with Gradle Files** 하여 프로젝트와 Gradle 을 동기화 하면 라이브러리가 정상적으로 업데이트 된 것을 확인할 수 있습니다.
+- **Invalidate and Restart** 하여 프로젝트와 Gradle 을 동기화 하면 라이브러리가 정상적으로 업데이트 된 것을 확인할 수 있습니다.
 - 혹시 문제가 여전하다면, 라이브러리 버전을 바꾸어 가며 테스트 해보시기 바랍니다. 반드시 될 겁니다 : )
 
 ### Gradle 캐시 경로 진입
